{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 142,
  "lineage": "970db90c-57f0-d6a7-0b67-523fc30ef15d",
  "resources": [
    {
      "module": "module.demo_app[0]",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/consul-ingress-gateway",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "consul",
                  "meta.helm.sh/release-namespace": "default"
                },
                "generation": 0,
                "labels": {
                  "app": "consul",
                  "app.kubernetes.io/managed-by": "Helm",
                  "chart": "consul-helm",
                  "component": "ingress-gateway",
                  "heritage": "Helm",
                  "ingress-gateway-name": "consul-ingress-gateway",
                  "release": "consul"
                },
                "name": "consul-ingress-gateway",
                "namespace": "default",
                "resource_version": "1820",
                "uid": "23af827c-9208-48fb-9583-c7246c1ca6ae"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.46.220",
                "cluster_ips": [
                  "172.20.46.220"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "gateway-0",
                    "node_port": 30463,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "consul",
                  "component": "ingress-gateway",
                  "ingress-gateway-name": "consul-ingress-gateway",
                  "release": "consul"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a23af827c920848fb9583c7246c1ca6a-1154899979.us-east-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:436973907597:security-group/sg-0822d6b9dc21ac4a4",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0822d6b9dc21ac4a4",
            "ingress": [],
            "name": "consul-quickstart-1710151394779-eks2024031110125160600000000a",
            "name_prefix": "consul-quickstart-1710151394779-eks",
            "owner_id": "436973907597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "consul-quickstart-1710151394779-eks-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "consul-quickstart-1710151394779-eks-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c997ca90a5e76d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:436973907597:security-group/sg-04b6b76a70ebe7c9a",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-04b6b76a70ebe7c9a",
            "ingress": [],
            "name": "consul-quickstart-1710151394779-eks20240311101251603400000009",
            "name_prefix": "consul-quickstart-1710151394779-eks",
            "owner_id": "436973907597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "consul-quickstart-1710151394779-eks-eks_worker_sg",
              "kubernetes.io/cluster/consul-quickstart-1710151394779-eks": "owned"
            },
            "tags_all": {
              "Name": "consul-quickstart-1710151394779-eks-eks_worker_sg",
              "kubernetes.io/cluster/consul-quickstart-1710151394779-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c997ca90a5e76d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-4021487439",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0822d6b9dc21ac4a4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-307707189",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0822d6b9dc21ac4a4",
            "self": false,
            "source_security_group_id": "sg-04b6b76a70ebe7c9a",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1467018500",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04b6b76a70ebe7c9a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3062280953",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b6b76a70ebe7c9a",
            "self": false,
            "source_security_group_id": "sg-0822d6b9dc21ac4a4",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2726176854",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b6b76a70ebe7c9a",
            "self": false,
            "source_security_group_id": "sg-0822d6b9dc21ac4a4",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3118467048",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04b6b76a70ebe7c9a",
            "self": false,
            "source_security_group_id": "sg-04b6b76a70ebe7c9a",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dbfb439f764a5ba",
            "domain": "vpc",
            "id": "eipalloc-03dbfb439f764a5ba",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-143-77-144.us-east-2.compute.amazonaws.com",
            "public_ip": "3.143.77.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "consul-quickstart-1710151394779-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "consul-quickstart-1710151394779-vpc-us-east-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:436973907597:internet-gateway/igw-0dc0fa3aade14c416",
            "id": "igw-0dc0fa3aade14c416",
            "owner_id": "436973907597",
            "tags": {
              "Name": "consul-quickstart-1710151394779-vpc"
            },
            "tags_all": {
              "Name": "consul-quickstart-1710151394779-vpc"
            },
            "vpc_id": "vpc-05c997ca90a5e76d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dbfb439f764a5ba",
            "connectivity_type": "public",
            "id": "nat-0794ef8a7ce63d7ca",
            "network_interface_id": "eni-0df1c1c82b6a5ef99",
            "private_ip": "10.0.1.132",
            "public_ip": "3.143.77.144",
            "subnet_id": "subnet-02a828422033073d7",
            "tags": {
              "Name": "consul-quickstart-1710151394779-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "consul-quickstart-1710151394779-vpc-us-east-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-078c12be3e00c5e451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0794ef8a7ce63d7ca",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078c12be3e00c5e45",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dc0fa3aade14c416",
            "id": "r-rtb-0a17b7e90ab89e44a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a17b7e90ab89e44a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:436973907597:route-table/rtb-078c12be3e00c5e45",
            "id": "rtb-078c12be3e00c5e45",
            "owner_id": "436973907597",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "consul-quickstart-1710151394779-vpc-private"
            },
            "tags_all": {
              "Name": "consul-quickstart-1710151394779-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c997ca90a5e76d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:436973907597:route-table/rtb-0a17b7e90ab89e44a",
            "id": "rtb-0a17b7e90ab89e44a",
            "owner_id": "436973907597",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "consul-quickstart-1710151394779-vpc-public"
            },
            "tags_all": {
              "Name": "consul-quickstart-1710151394779-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c997ca90a5e76d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c8a9261587e0298",
            "route_table_id": "rtb-078c12be3e00c5e45",
            "subnet_id": "subnet-0e171660ac85e38fa"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea19397f7fcd647e",
            "route_table_id": "rtb-078c12be3e00c5e45",
            "subnet_id": "subnet-078739c603cd089af"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0632663d424bd0fc1",
            "route_table_id": "rtb-078c12be3e00c5e45",
            "subnet_id": "subnet-05387cd6a31b476b9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d077a656c0082157",
            "route_table_id": "rtb-0a17b7e90ab89e44a",
            "subnet_id": "subnet-02a828422033073d7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0296c7a35f2c5d47d",
            "route_table_id": "rtb-0a17b7e90ab89e44a",
            "subnet_id": "subnet-0ab7c4be739b1e4d7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f46ecc33f0f33a09",
            "route_table_id": "rtb-0a17b7e90ab89e44a",
            "subnet_id": "subnet-063605f727a5f40bf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:436973907597:subnet/subnet-0e171660ac85e38fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e171660ac85e38fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436973907597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consul-quickstart-1710151394779-vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "consul-quickstart-1710151394779-vpc-private-us-east-2a"
            },
            "vpc_id": "vpc-05c997ca90a5e76d0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:436973907597:subnet/subnet-078739c603cd089af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078739c603cd089af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436973907597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consul-quickstart-1710151394779-vpc-private-us-east-2b"
            },
            "tags_all": {
              "Name": "consul-quickstart-1710151394779-vpc-private-us-east-2b"
            },
            "vpc_id": "vpc-05c997ca90a5e76d0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:436973907597:subnet/subnet-05387cd6a31b476b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05387cd6a31b476b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436973907597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consul-quickstart-1710151394779-vpc-private-us-east-2c"
            },
            "tags_all": {
              "Name": "consul-quickstart-1710151394779-vpc-private-us-east-2c"
            },
            "vpc_id": "vpc-05c997ca90a5e76d0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:436973907597:subnet/subnet-02a828422033073d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a828422033073d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "436973907597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consul-quickstart-1710151394779-vpc-public-us-east-2a"
            },
            "tags_all": {
              "Name": "consul-quickstart-1710151394779-vpc-public-us-east-2a"
            },
            "vpc_id": "vpc-05c997ca90a5e76d0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:436973907597:subnet/subnet-0ab7c4be739b1e4d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab7c4be739b1e4d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "436973907597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consul-quickstart-1710151394779-vpc-public-us-east-2b"
            },
            "tags_all": {
              "Name": "consul-quickstart-1710151394779-vpc-public-us-east-2b"
            },
            "vpc_id": "vpc-05c997ca90a5e76d0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:436973907597:subnet/subnet-063605f727a5f40bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063605f727a5f40bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "436973907597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consul-quickstart-1710151394779-vpc-public-us-east-2c"
            },
            "tags_all": {
              "Name": "consul-quickstart-1710151394779-vpc-public-us-east-2c"
            },
            "vpc_id": "vpc-05c997ca90a5e76d0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:436973907597:vpc/vpc-05c997ca90a5e76d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d71967105b644a31",
            "default_route_table_id": "rtb-0e8f3801ad7173101",
            "default_security_group_id": "sg-057982d34b78696da",
            "dhcp_options_id": "dopt-0ef1bcb635dc94276",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05c997ca90a5e76d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8f3801ad7173101",
            "owner_id": "436973907597",
            "tags": {
              "Name": "consul-quickstart-1710151394779-vpc"
            },
            "tags_all": {
              "Name": "consul-quickstart-1710151394779-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}